refactored RAG code

--- a/codes/RAG_web_scrap_secure_single.ipynb
+++ b/codes/RAG_web_scrap_secure_single.ipynb
@@ -2,23 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b2643936",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 3 valid links. Scraping the content...\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "206d2983297346088bddb584b4fb8082",
+       "model_id": "32120e811b3b428b9b53fed56925078a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -32,29 +25,21 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1f0d46f99a2246ae81a26d3dd60e9eef",
+       "model_id": "1b73711bbf594f4daf92737bcff8d489",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Partitioning text:   0%|          | 0/94 [00:00<?, ?it/s]"
+       "Partitioning text:   0%|          | 0/95 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total partition count: 5\n",
-      "Models embedding dimension: 3072\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7819f39b12774c84b279a355e6a70d21",
+       "model_id": "6946132a665b4df3939ecb5bd3a629d9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -85,6 +70,8 @@
     "ollama_model_name = \"llama3.2:latest\"\n",
     "\n",
     "base_url = 'https://en.wikipedia.org/wiki/Bangladesh'\n",
+    "\n",
+    "VERBOSE = False\n",
     "\n",
     "# Configure Selenium Chrome options\n",
     "chrome_options = Options()\n",
@@ -143,15 +130,14 @@
     "\n",
     "    if response.status_code == 200:\n",
     "        result = response.json()\n",
-    "        # Check if 'model_info' and 'embedding_length' exist in the response\n",
     "        if 'model_info' in result and 'llama.embedding_length' in result['model_info']:\n",
     "            embedding_length = result['model_info'][\"llama.embedding_length\"]\n",
     "            return embedding_length\n",
     "        else:\n",
-    "            print(\"Embedding length not found in the model info.\")\n",
+    "            print(\"ERROR: Embedding length not found in the model info.\")\n",
     "            return 0\n",
     "    else:\n",
-    "        print(f\"Error from Ollama: {response.status_code}\")\n",
+    "        print(f\"ERROR: Error from Ollama: {response.status_code}\")\n",
     "        return 0\n",
     "\n",
     "def get_embedding(text):\n",
@@ -164,12 +150,13 @@
     "        embedding = np.array(result['embedding'])\n",
     "        return embedding\n",
     "    else:\n",
-    "        print(f\"Error from Ollama: {response.status_code}\")\n",
+    "        print(f\"ERROR: Error from Ollama: {response.status_code}\")\n",
     "        return np.zeros(768)  # (adjust dimension based on model)\n",
     "\n",
     "def store_in_faiss(partitions):\n",
     "    dimension = get_embedding_shape()\n",
-    "    print(f\"Models embedding dimension: {dimension}\")\n",
+    "    if VERBOSE:\n",
+    "        print(f\"Models embedding dimension: {dimension}\")\n",
     "    index = faiss.IndexFlatL2(dimension)  # L2 distance\n",
     "\n",
     "    doc_vectors = []\n",
@@ -187,7 +174,7 @@
     "    query_embedding = get_embedding(query)\n",
     "    distances, indices = faiss_index.search(np.array([query_embedding]), k=k)  # Retrieve top-1 closest documents\n",
     "    retrieved_docs = []\n",
-    "    for i in indices[0]:\n",
+    "    for i in tqdm(indices[0], desc=\"Retrieving documents\"):\n",
     "        if i >= len(partitions):\n",
     "            print(f\"WARN: Index {i} out of bounds for partition list.\")\n",
     "            continue\n",
@@ -200,8 +187,14 @@
     "                             data=json.dumps(payload))\n",
     "    return response.json()\n",
     "\n",
+    "def ask(query):\n",
+    "    rag_response = retrieve_with_rag(query, faiss_index, doc_ids)\n",
+    "    return rag_response[\"response\"]\n",
+    "\n",
     "valid_links = get_visitable_links(base_url)[1:4]\n",
-    "print(f\"Found {len(valid_links)} valid links. Scraping the content...\")\n",
+    "\n",
+    "if VERBOSE:\n",
+    "    print(f\"Found {len(valid_links)} valid links. Scraping the content...\")\n",
     "\n",
     "all_text = \"\"\n",
     "for link in tqdm(valid_links, desc=\"Scraping items\"):\n",
@@ -209,7 +202,9 @@
     "    all_text += text_content + \"\\n\\n\"\n",
     "\n",
     "partitions = partition_text(all_text, max_length=512)\n",
-    "print(f'Total partition count: {len(partitions)}')\n",
+    "\n",
+    "if VERBOSE:\n",
+    "    print(f'Total partition count: {len(partitions)}')\n",
     "\n",
     "# Store the partitions in FAISS\n",
     "faiss_index, doc_ids = store_in_faiss(partitions)"
@@ -217,52 +212,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "acf96b50",
+   "execution_count": 2,
+   "id": "74a9a511",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Query: Where is Bangladesh located? \n",
-      "\n",
-      "RAG Response:\n",
-      "Bangladesh is a country in South Asia, centered on the transnational historical region of Bengal along the eponymous bay.\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2436160a75b14a47bd240196e6b63daf",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Retrieving documents:   0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Bangladesh is located in South Asia, centered on the transnational historical region of Bengal along the eponymous bay.'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "query = \"Where is Bangladesh located?\"\n",
-    "rag_response = retrieve_with_rag(query, faiss_index, doc_ids)\n",
-    "answer = rag_response[\"response\"]\n",
-    "print(f\"Query: {query} \\n\\nRAG Response:\\n{answer}\")"
+    "ask(\"Where is Bangladesh located?\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "c6d278d0",
+   "execution_count": 3,
+   "id": "9125cee7",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Query: Who is the father of Bangladesh? \n",
-      "\n",
-      "RAG Response:\n",
-      "The text does not mention who is considered the \"father\" of Bangladesh. It does provide information about the country's history, culture, and demographics, but it does not include any specific information about a person being referred to as the \"father\" of Bangladesh.\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4211a00b20904b2499576d780f20e953",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Retrieving documents:   0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Unfortunately, the provided text does not mention who the \"father\" of Bangladesh is. However, it does provide information about the history of Bangladesh, its official languages, culture, and other interesting facts. If you\\'re looking for information on a specific person, I\\'d be happy to try and help further!'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "query = \"Who is the father of Bangladesh?\"\n",
-    "rag_response = retrieve_with_rag(query, faiss_index, doc_ids)\n",
-    "answer = rag_response[\"response\"]\n",
-    "print(f\"Query: {query} \\n\\nRAG Response:\\n{answer}\")\n",
+    "ask(\"Who is the father of Bangladesh?\")\n",
     "\n",
     "# Close the Selenium browser\n",
     "#driver.quit()"
