--- a/snippets/RAG_FAISS_Store.ipynb
+++ b/snippets/RAG_FAISS_Store.ipynb
@@ -2,12 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "adb778f9",
+   "execution_count": 11,
+   "id": "8db6fefc",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing:  https://en.wikipedia.org/wiki/Main_Page\n",
+      "Finished!\n",
+      "Total text size:  1\n",
+      "URL: https://en.wikipedia.org/wiki/Main_Page\n",
+      "Text: Wikipedia, the free encyclopedia Jump to content Wiki Loves Monuments: Photograph a monument, help Wikipedia and win! Learn more From Wikipedia, the free encyclopedia Welcome to Wikipedia , the free e...\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Imports\n",
     "import time\n",
@@ -25,8 +38,8 @@
     "from collections import deque\n",
     "\n",
     "# Constants\n",
-    "root = 'https://www.web.com'\n",
-    "base_url = 'https://www.web.com'\n",
+    "root = 'https://en.wikipedia.org/wiki/Main_Page'\n",
+    "base_url = 'https://en.wikipedia.org/wiki/Main_Page'\n",
     "\n",
     "ollama_url_inf = \"http://localhost:11434/api/show\"\n",
     "ollama_url_emb = \"http://localhost:11434/api/embeddings\"\n",
@@ -50,7 +63,6 @@
     "        webgl_vendor=\"Intel Inc.\", renderer=\"Intel Iris OpenGL Engine\", fix_hairline=True)\n",
     "\n",
     "def extract_clean_text_from_html(html_content):\n",
-    "    \"\"\"Extract and clean text from HTML content.\"\"\"\n",
     "    soup = BeautifulSoup(html_content, 'html.parser')\n",
     "    \n",
     "    # Remove unwanted tags\n",
@@ -83,20 +95,18 @@
     "            continue\n",
     "        \n",
     "        visited_urls.add(url)\n",
-    "        \n",
+    "\n",
     "        try:\n",
     "            driver.get(url)\n",
     "            time.sleep(1)\n",
-    "            \n",
+    "\n",
     "            page_text = extract_clean_text_from_html(driver.page_source)\n",
     "            text_data.append((url, page_text))\n",
     "            \n",
-    "            # Proceed only if within specified depth\n",
     "            if current_depth < depth:\n",
     "                soup = BeautifulSoup(driver.page_source, 'html.parser')\n",
     "                links = soup.find_all('a', href=True)\n",
     "                \n",
-    "                # Find and queue up all valid links on the page\n",
     "                for link in links:\n",
     "                    new_url = urljoin(base_url, link['href'])\n",
     "                    if new_url not in visited_urls and new_url.startswith(root):\n",
@@ -112,7 +122,7 @@
     "try:\n",
     "    scraped_data = scrape_recursive(base_url)\n",
     "finally:\n",
-    "    #driver.quit()\n",
+    "    driver.quit()\n",
     "    print(\"Finished!\")\n",
     "\n",
     "print(\"Total text size: \", len(scraped_data))\n",
@@ -123,19 +133,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "f79ce979",
+   "execution_count": 12,
+   "id": "6b402c47",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d8f02d445a644837b33abb511b05b364",
+       "model_id": "5d713daf5e784ec085f4d8f7f930b326",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Partitioning text:   0%|          | 0/409 [00:00<?, ?it/s]"
+       "Partitioning text:   0%|          | 0/54 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -145,40 +155,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total partition count: 93\n",
+      "Total partition count: 3\n",
       "Model's embedding dimension: 3072\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "be7bcdadf087428680d233c9a852e139",
+       "model_id": "5268f99a513c4b89a5d46d478f743c05",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Fetching embeddings:   0%|          | 0/93 [00:00<?, ?it/s]"
+       "Fetching embeddings:   0%|          | 0/3 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "ename": "CancelledError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mCancelledError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[49], line 112\u001b[0m\n\u001b[1;32m    109\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m VERBOSE:\n\u001b[1;32m    110\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTotal partition count: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(partitions)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m--> 112\u001b[0m faiss_index, doc_ids \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mawait\u001b[39;00m store_in_faiss(partitions)\n",
-      "Cell \u001b[0;32mIn[49], line 76\u001b[0m, in \u001b[0;36mstore_in_faiss\u001b[0;34m(partitions)\u001b[0m\n\u001b[1;32m     73\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mModel\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ms embedding dimension: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdimension\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     74\u001b[0m index \u001b[38;5;241m=\u001b[39m faiss\u001b[38;5;241m.\u001b[39mIndexFlatL2(dimension)\n\u001b[0;32m---> 76\u001b[0m embeddings \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mawait\u001b[39;00m get_embeddings(partitions)\n\u001b[1;32m     77\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m embeddings:\n\u001b[1;32m     78\u001b[0m     index\u001b[38;5;241m.\u001b[39madd(np\u001b[38;5;241m.\u001b[39marray(embeddings))  \u001b[38;5;66;03m# Bulk add for efficiency\u001b[39;00m\n",
-      "Cell \u001b[0;32mIn[49], line 60\u001b[0m, in \u001b[0;36mget_embeddings\u001b[0;34m(partitions)\u001b[0m\n\u001b[1;32m     58\u001b[0m payload \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodel\u001b[39m\u001b[38;5;124m\"\u001b[39m: ollama_model_name, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mprompt\u001b[39m\u001b[38;5;124m\"\u001b[39m: partition}\n\u001b[1;32m     59\u001b[0m headers \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mContent-Type\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mapplication/json\u001b[39m\u001b[38;5;124m\"\u001b[39m}\n\u001b[0;32m---> 60\u001b[0m \u001b[38;5;28;01masync\u001b[39;00m \u001b[38;5;28;01mwith\u001b[39;00m session\u001b[38;5;241m.\u001b[39mpost(ollama_url_emb, headers\u001b[38;5;241m=\u001b[39mheaders, data\u001b[38;5;241m=\u001b[39mjson\u001b[38;5;241m.\u001b[39mdumps(payload)) \u001b[38;5;28;01mas\u001b[39;00m response:\n\u001b[1;32m     61\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m response\u001b[38;5;241m.\u001b[39mstatus \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m200\u001b[39m:\n\u001b[1;32m     62\u001b[0m         result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mawait\u001b[39;00m response\u001b[38;5;241m.\u001b[39mjson()\n",
-      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/aiohttp/client.py:1141\u001b[0m, in \u001b[0;36m_BaseRequestContextManager.__aenter__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1140\u001b[0m \u001b[38;5;28;01masync\u001b[39;00m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__aenter__\u001b[39m(\u001b[38;5;28mself\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m _RetType:\n\u001b[0;32m-> 1141\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_resp \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mawait\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_coro\n\u001b[1;32m   1142\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_resp\n",
-      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/aiohttp/client.py:560\u001b[0m, in \u001b[0;36mClientSession._request\u001b[0;34m(self, method, str_or_url, params, data, json, cookies, headers, skip_auto_headers, auth, allow_redirects, max_redirects, compress, chunked, expect100, raise_for_status, read_until_eof, proxy, proxy_auth, timeout, verify_ssl, fingerprint, ssl_context, ssl, proxy_headers, trace_request_ctx, read_bufsize)\u001b[0m\n\u001b[1;32m    558\u001b[0m resp \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mawait\u001b[39;00m req\u001b[38;5;241m.\u001b[39msend(conn)\n\u001b[1;32m    559\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 560\u001b[0m     \u001b[38;5;28;01mawait\u001b[39;00m resp\u001b[38;5;241m.\u001b[39mstart(conn)\n\u001b[1;32m    561\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mBaseException\u001b[39;00m:\n\u001b[1;32m    562\u001b[0m     resp\u001b[38;5;241m.\u001b[39mclose()\n",
-      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/aiohttp/client_reqrep.py:899\u001b[0m, in \u001b[0;36mClientResponse.start\u001b[0;34m(self, connection)\u001b[0m\n\u001b[1;32m    897\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m    898\u001b[0m     protocol \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_protocol\n\u001b[0;32m--> 899\u001b[0m     message, payload \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mawait\u001b[39;00m protocol\u001b[38;5;241m.\u001b[39mread()  \u001b[38;5;66;03m# type: ignore[union-attr]\u001b[39;00m\n\u001b[1;32m    900\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m http\u001b[38;5;241m.\u001b[39mHttpProcessingError \u001b[38;5;28;01mas\u001b[39;00m exc:\n\u001b[1;32m    901\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m ClientResponseError(\n\u001b[1;32m    902\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrequest_info,\n\u001b[1;32m    903\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhistory,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    906\u001b[0m         headers\u001b[38;5;241m=\u001b[39mexc\u001b[38;5;241m.\u001b[39mheaders,\n\u001b[1;32m    907\u001b[0m     ) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mexc\u001b[39;00m\n",
-      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/aiohttp/streams.py:616\u001b[0m, in \u001b[0;36mDataQueue.read\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    614\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_waiter \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_loop\u001b[38;5;241m.\u001b[39mcreate_future()\n\u001b[1;32m    615\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 616\u001b[0m     \u001b[38;5;28;01mawait\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_waiter\n\u001b[1;32m    617\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m (asyncio\u001b[38;5;241m.\u001b[39mCancelledError, asyncio\u001b[38;5;241m.\u001b[39mTimeoutError):\n\u001b[1;32m    618\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_waiter \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
-      "\u001b[0;31mCancelledError\u001b[0m: "
-     ]
     }
    ],
    "source": [
@@ -294,6 +287,59 @@
     "    print(f'Total partition count: {len(partitions)}')\n",
     "\n",
     "faiss_index, doc_ids = await store_in_faiss(partitions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a36049ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "all_text len: 7880\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'all_text len: {len(all_text)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "a2ea9865",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "695a3a0e599c487bb356c5dfad5ac125",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Fetching embeddings:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The main page of Wikipedia.\n"
+     ]
+    }
+   ],
+   "source": [
+    "ans = await ask(\"Whats the page about?\")\n",
+    "print(ans)"
    ]
   }
  ],
