Ollama chat api from notebook

--- a/snippets/RAG_FAISS_Store.ipynb
+++ b/snippets/RAG_FAISS_Store.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "8db6fefc",
    "metadata": {
     "scrolled": false
@@ -28,6 +28,10 @@
     "import json\n",
     "import requests\n",
     "import numpy as np\n",
+    "import json\n",
+    "import asyncio\n",
+    "import aiohttp\n",
+    "from tqdm.notebook import tqdm\n",
     "from bs4 import BeautifulSoup\n",
     "from selenium import webdriver\n",
     "from selenium_stealth import stealth\n",
@@ -133,14 +137,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "6b402c47",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5d713daf5e784ec085f4d8f7f930b326",
+       "model_id": "372415cdd82b4a2cad810d94ec8f54ee",
        "version_major": 2,
        "version_minor": 0
       },
@@ -162,7 +166,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5268f99a513c4b89a5d46d478f743c05",
+       "model_id": "ba7651cf3eec473a8ed7b87029d7dbfe",
        "version_major": 2,
        "version_minor": 0
       },
@@ -183,8 +187,6 @@
     "import aiohttp\n",
     "from tqdm.notebook import tqdm\n",
     "\n",
-    "# Constants (assuming these are defined)\n",
-    "VERBOSE = True\n",
     "\n",
     "# Function to partition text efficiently\n",
     "def partition_text(text, max_length):\n",
@@ -266,7 +268,7 @@
     "            retrieved_docs.append(partitions[i])\n",
     "\n",
     "    combined_docs = \"\\n\".join(retrieved_docs)\n",
-    "    rag_prompt = f\"Context:\\n{combined_docs}\\n\\nQuery: {query}\\nAnswer:\"\n",
+    "    rag_prompt = f\"Instruction: If you do not find the exact answer in the context, simply say you dont know.\\nContext:\\n{combined_docs}\\n\\nQuery: {query}\\nAnswer:\"\n",
     "    \n",
     "    async with aiohttp.ClientSession() as session:\n",
     "        payload = {\"model\": ollama_model_name, \"prompt\": rag_prompt, \"stream\": False}\n",
@@ -291,15 +293,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "a36049ae",
+   "execution_count": 8,
+   "id": "8eba59ce",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "all_text len: 7880\n"
+      "all_text len: 7884\n"
      ]
     }
    ],
@@ -309,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "a2ea9865",
    "metadata": {
     "scrolled": true
@@ -318,7 +320,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "695a3a0e599c487bb356c5dfad5ac125",
+       "model_id": "1de936e41e704e81995f35dc9a3fd938",
        "version_major": 2,
        "version_minor": 0
       },
@@ -333,7 +335,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The main page of Wikipedia.\n"
+      "The page you're referring to is the Wikipedia Main Page.\n"
      ]
     }
    ],
