Rename ollama chat example file

--- a/snippets/Ollama_Chat_API.ipynb
+++ b/snippets/Ollama_Chat_API.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "babd92f8",
+   "metadata": {},
+   "source": [
+    "## Installing and running ollama server\n",
+    "\n",
+    "#### Have a look into their github repository: https://github.com/ollama/ollama"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "0742a467",
@@ -144,6 +154,97 @@
    ],
    "source": [
     "_ = await chat(\"What is it's vision?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "93375e67",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "Here is an example of a binary search algorithm implemented in C:\n",
+       "\n",
+       "```c\n",
+       "#include <stdio.h>\n",
+       "#include <stdlib.h>\n",
+       "\n",
+       "// Function to perform binary search\n",
+       "int binary_search(int arr[], int n, int target) {\n",
+       "    int left = 0;\n",
+       "    int right = n - 1;\n",
+       "\n",
+       "    while (left <= right) {\n",
+       "        // Calculate the middle index\n",
+       "        int mid = left + (right - left) / 2;\n",
+       "\n",
+       "        // Check if the target is found at the middle index\n",
+       "        if (arr[mid] == target) {\n",
+       "            return mid;\n",
+       "        }\n",
+       "        // If the target is less than the middle element, move to the left half\n",
+       "        else if (arr[mid] > target) {\n",
+       "            right = mid - 1;\n",
+       "        }\n",
+       "        // If the target is greater than the middle element, move to the right half\n",
+       "        else {\n",
+       "            left = mid + 1;\n",
+       "        }\n",
+       "    }\n",
+       "\n",
+       "    // Return -1 if the target is not found in the array\n",
+       "    return -1;\n",
+       "}\n",
+       "\n",
+       "// Function to print an array\n",
+       "void print_array(int arr[], int n) {\n",
+       "    for (int i = 0; i < n; i++) {\n",
+       "        printf(\"%d \", arr[i]);\n",
+       "    }\n",
+       "    printf(\"\\n\");\n",
+       "}\n",
+       "\n",
+       "int main() {\n",
+       "    // Example usage:\n",
+       "    int arr[] = {2, 4, 6, 8, 10};\n",
+       "    int n = sizeof(arr) / sizeof(arr[0]);\n",
+       "\n",
+       "    printf(\"Original array: \");\n",
+       "    print_array(arr, n);\n",
+       "\n",
+       "    int target = 8;\n",
+       "    int result = binary_search(arr, n, target);\n",
+       "\n",
+       "    if (result != -1) {\n",
+       "        printf(\"Element %d found at index %d\\n\", target, result);\n",
+       "    } else {\n",
+       "        printf(\"Element %d not found in the array\\n\", target);\n",
+       "    }\n",
+       "\n",
+       "    return 0;\n",
+       "}\n",
+       "```\n",
+       "\n",
+       "This code performs a binary search on an array of integers. The `binary_search` function takes three parameters:\n",
+       "\n",
+       "*   `arr`: The input array to be searched.\n",
+       "*   `n`: The number of elements in the array.\n",
+       "*   `target`: The target element to be found.\n",
+       "\n",
+       "The `print_array` function is used to display the original array and any results from the binary search."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "_ = await chat(\"Generate a code for binary search in C\")"
    ]
   }
  ],
