handled robot detection in scraping

--- a/snippets/Ollama_Chat_API.ipynb
+++ b/snippets/Ollama_Chat_API.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "babd92f8",
+   "id": "62d703cd",
    "metadata": {},
    "source": [
     "## Installing and running ollama server\n",
@@ -26,9 +26,10 @@
     "ollama_model_name = \"llama3.2:latest\"\n",
     "\n",
     "chat_history = []\n",
-    "\n",
+    "    \n",
     "async def chat(prompt, stream=True):\n",
     "    global chat_history\n",
+    "    in_code_block = False\n",
     "    \n",
     "    chat_history.append({\"role\": \"user\", \"content\": prompt})\n",
     "    payload = {\"model\": ollama_model_name, \"messages\": chat_history, \"stream\": stream}\n",
@@ -69,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "id": "fad4ac9d",
    "metadata": {
     "scrolled": false
@@ -78,30 +79,31 @@
     {
      "data": {
       "text/markdown": [
-       "Facebook is a social media platform that allows users to create profiles, connect with friends and family, share updates and photos, join groups and communities, and participate in online discussions. It was founded in 2004 by Mark Zuckerberg and has since become one of the most widely used social media platforms in the world.\n",
+       "**Facebook: A Social Media Giant**\n",
        "\n",
-       "In essence, Facebook is a virtual space where people can:\n",
+       "Facebook is a social media platform that allows users to connect with friends, family, and interests, share content, and join communities. It was launched in 2004 by Mark Zuckerberg, along with his college roommates and fellow Harvard University students Eduardo Saverin, Andrew McCollum, Dustin Moskovitz, and Chris Hughes.\n",
        "\n",
-       "* Share their thoughts, feelings, and experiences with others\n",
-       "* Connect with friends, family, and acquaintances from all over the world\n",
-       "* Join communities based on shared interests or affiliations\n",
-       "* Access information and news about current events, trending topics, and popular culture\n",
+       "**Key Features:**\n",
        "\n",
-       "Facebook's core features include:\n",
+       "1.  **User Profiles:** Users create profiles to showcase their information, such as name, profile picture, interests, and work.\n",
+       "2.  **News Feed:** A constantly updating stream of news and updates from friends, family, and pages users follow.\n",
+       "3.  **Messaging:** Private messaging for direct communication with individuals or groups.\n",
+       "4.  **Groups:** Users can join groups based on shared interests, hobbies, or affiliations.\n",
+       "5.  **Events:** Users can create and attend events, such as birthday parties, concerts, or sports games.\n",
        "\n",
-       "1. Profiles: Users can create a profile to share information about themselves.\n",
-       "2. News Feed: A curated feed of updates from friends and pages users follow.\n",
-       "3. Groups: Communities based on shared interests or affiliations.\n",
-       "4. Messages: Private messaging between friends and family members.\n",
-       "5. Events: Creation and RSVPs for events, such as birthdays, weddings, or concerts.\n",
+       "**Impact:**\n",
        "\n",
-       "Over time, Facebook has evolved to include additional features, such as:\n",
+       "1.  **Social Networking:** Facebook revolutionized the way people connect with others online, creating a vast network of friends and acquaintances.\n",
+       "2.  **Online Communities:** Facebook has enabled users to join groups and forums related to various interests, fostering communities around shared passions.\n",
+       "3.  **Advertising:** Facebook's advertising platform allows businesses to target specific audiences, making it an essential tool for marketing and promotions.\n",
        "\n",
-       "1. Facebook Marketplace: A platform for buying and selling items locally.\n",
-       "2. Facebook Live: Real-time video streaming for personal and professional use.\n",
-       "3. Facebook Stories: A feature that allows users to share behind-the-scenes content.\n",
+       "**Statistics:**\n",
        "\n",
-       "Today, Facebook is a major part of modern online life, with billions of users worldwide."
+       "1.  **2.7 billion monthly active users**\n",
+       "2.  **700 million daily active users**\n",
+       "3.  **30% of online adults in the United States use Facebook**\n",
+       "\n",
+       "Facebook has become a fundamental part of modern life, with its presence felt across various aspects of society."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -117,32 +119,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "id": "fb806b7f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "Facebook's vision is to \"give people the power to build community and bring the world closer together.\" This vision is reflected in Mark Zuckerberg's statement: \"Our mission is to give people the power to build community and make the world more open and connected.\"\n",
+       "The original \"Hello, World!\" program was written by Brian Kernighan in 1974 as part of his book \"A Tutorial Introduction to the Language B\" for Bell Labs.\n",
        "\n",
-       "More specifically, Facebook's long-term goals include:\n",
+       "Brian Kernighan's vision was to create a simple programming exercise that would allow beginners to get started with programming and to see the output of their first program. The idea behind it was to write a program that simply printed out the words \"Hello, World!\" in order to demonstrate the basic concept of running code.\n",
        "\n",
-       "1. **Building a global network**: Connect people from all over the world and create a platform where everyone can contribute.\n",
-       "2. **Empowering communities**: Create tools and platforms that help people connect with others who share similar interests, passions, or causes.\n",
-       "3. **Facilitating knowledge sharing**: Provide a space for people to share information, ideas, and expertise, and make it easily accessible to others.\n",
-       "4. **Promoting online safety and security**: Protect users' data and ensure that the platform is a safe and trustworthy place for everyone.\n",
-       "5. **Innovating new technologies**: Continuously innovate and experiment with new technologies and features to improve the user experience.\n",
-       "\n",
-       "Facebook's vision is also reflected in its core values:\n",
-       "\n",
-       "1. **Openness**: Be open to new ideas, perspectives, and connections.\n",
-       "2. **Community**: Foster a sense of belonging and connection among users.\n",
-       "3. **Innovation**: Continuously innovate and experiment with new technologies and features.\n",
-       "4. **Transparency**: Be transparent about data collection, usage, and policies.\n",
-       "5. **Accountability**: Take responsibility for the impact of the platform on society.\n",
-       "\n",
-       "Overall, Facebook's vision is to create a global network that connects people, fosters community, and promotes knowledge sharing, innovation, and positive change."
+       "Kernighan wanted his students to be able to run this simple program on various platforms, including Unix, CP/M, and others, which helped to popularize the \"Hello, World!\" phrase as a way to signal that a programmer had successfully compiled and executed their first program."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -158,82 +146,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "93375e67",
+   "execution_count": 19,
+   "id": "90940a8f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "Here is an example of a binary search algorithm implemented in C:\n",
+       "# Smallest \"Hello, World!\" Program in C\n",
+       "\n",
+       "Here's the smallest possible \"Hello, World!\" program in C:\n",
        "\n",
        "```c\n",
        "#include <stdio.h>\n",
-       "#include <stdlib.h>\n",
-       "\n",
-       "// Function to perform binary search\n",
-       "int binary_search(int arr[], int n, int target) {\n",
-       "    int left = 0;\n",
-       "    int right = n - 1;\n",
-       "\n",
-       "    while (left <= right) {\n",
-       "        // Calculate the middle index\n",
-       "        int mid = left + (right - left) / 2;\n",
-       "\n",
-       "        // Check if the target is found at the middle index\n",
-       "        if (arr[mid] == target) {\n",
-       "            return mid;\n",
-       "        }\n",
-       "        // If the target is less than the middle element, move to the left half\n",
-       "        else if (arr[mid] > target) {\n",
-       "            right = mid - 1;\n",
-       "        }\n",
-       "        // If the target is greater than the middle element, move to the right half\n",
-       "        else {\n",
-       "            left = mid + 1;\n",
-       "        }\n",
-       "    }\n",
-       "\n",
-       "    // Return -1 if the target is not found in the array\n",
-       "    return -1;\n",
-       "}\n",
-       "\n",
-       "// Function to print an array\n",
-       "void print_array(int arr[], int n) {\n",
-       "    for (int i = 0; i < n; i++) {\n",
-       "        printf(\"%d \", arr[i]);\n",
-       "    }\n",
-       "    printf(\"\\n\");\n",
-       "}\n",
        "\n",
        "int main() {\n",
-       "    // Example usage:\n",
-       "    int arr[] = {2, 4, 6, 8, 10};\n",
-       "    int n = sizeof(arr) / sizeof(arr[0]);\n",
-       "\n",
-       "    printf(\"Original array: \");\n",
-       "    print_array(arr, n);\n",
-       "\n",
-       "    int target = 8;\n",
-       "    int result = binary_search(arr, n, target);\n",
-       "\n",
-       "    if (result != -1) {\n",
-       "        printf(\"Element %d found at index %d\\n\", target, result);\n",
-       "    } else {\n",
-       "        printf(\"Element %d not found in the array\\n\", target);\n",
-       "    }\n",
-       "\n",
-       "    return 0;\n",
+       "    printf(\"Hello, World!\\n\");\n",
        "}\n",
        "```\n",
        "\n",
-       "This code performs a binary search on an array of integers. The `binary_search` function takes three parameters:\n",
+       "This code includes only 3 lines:\n",
        "\n",
-       "*   `arr`: The input array to be searched.\n",
-       "*   `n`: The number of elements in the array.\n",
-       "*   `target`: The target element to be found.\n",
-       "\n",
-       "The `print_array` function is used to display the original array and any results from the binary search."
+       "1.  The `#include <stdio.h>` directive to include the standard input/output library.\n",
+       "2.  The `main()` function declaration, which is the entry point for any C program.\n",
+       "3.  A single line of code within the `main()` function that prints \"Hello, World!\" to the console using `printf()`."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -244,7 +180,38 @@
     }
    ],
    "source": [
-    "_ = await chat(\"Generate a code for binary search in C\")"
+    "_ = await chat(\"Generate smallest hello world in C.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "dc0d6e9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "# Smallest \"Hello, World!\" Program in Python\n",
+       "\n",
+       "Here's the smallest possible \"Hello, World!\" program in Python:\n",
+       "\n",
+       "```python\n",
+       "print(\"Hello, World!\")\n",
+       "```\n",
+       "\n",
+       "This code only contains one line of code and uses the built-in `print()` function to output the string \"Hello, World!\"."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "_ = await chat(\"What about in Python?\")"
    ]
   }
  ],
