--- a/codes/rag/RAG_web_scrap_secure_single.ipynb
+++ b/codes/rag/RAG_web_scrap_secure_single.ipynb
@@ -3,17 +3,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adb778f9",
+   "id": "560667b4",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "# Imports\n",
     "import time\n",
     "import faiss\n",
     "import json\n",
     "import requests\n",
+    "import random\n",
     "import numpy as np\n",
     "from bs4 import BeautifulSoup\n",
     "from selenium import webdriver\n",
@@ -24,9 +24,8 @@
     "from tqdm.notebook import tqdm\n",
     "from collections import deque\n",
     "\n",
-    "# Constants\n",
     "root = 'https://www.web.com'\n",
-    "base_url = 'https://www.web.com'\n",
+    "base_url = 'https://www.web.com/res'\n",
     "\n",
     "ollama_url_inf = \"http://localhost:11434/api/show\"\n",
     "ollama_url_emb = \"http://localhost:11434/api/embeddings\"\n",
@@ -34,23 +33,35 @@
     "ollama_model_name = \"llama3.2:latest\"\n",
     "\n",
     "VERBOSE = True\n",
-    "DEPTH = 0\n",
+    "DEPTH = 1\n",
+    "MAX_LEN = 5\n",
     "\n",
-    "# Configure Selenium Chrome options\n",
+    "USER_AGENTS = [\n",
+    "    \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/85.0.4183.121 Safari/537.36\",\n",
+    "    \"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.93 Safari/537.36\",\n",
+    "    \"Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.114 Safari/537.36\",\n",
+    "]\n",
+    "\n",
     "chrome_options = Options()\n",
+    "chrome_options.add_argument('--enable-javascript')\n",
     "chrome_options.add_argument('--headless')\n",
     "chrome_options.add_argument('--disable-gpu')\n",
     "chrome_options.add_argument('--no-sandbox')\n",
     "chrome_options.add_argument('--disable-dev-shm-usage')\n",
+    "chrome_options.add_argument(f\"user-agent={random.choice(USER_AGENTS)}\")\n",
     "\n",
     "service = Service()\n",
     "driver = webdriver.Chrome(service=service, options=chrome_options)\n",
     "\n",
-    "stealth(driver, languages=[\"en-US\", \"en\"], vendor=\"Google Inc.\", platform=\"Win32\", \n",
-    "        webgl_vendor=\"Intel Inc.\", renderer=\"Intel Iris OpenGL Engine\", fix_hairline=True)\n",
+    "def apply_stealth(driver):\n",
+    "    stealth(driver, languages=[\"en-US\", \"en\"], vendor=\"Google Inc.\", platform=\"Win32\", \n",
+    "        webgl_vendor=\"Intel Inc.\", renderer=\"Intel Iris OpenGL Engine\", fix_hairline=True,\n",
+    "        run_on_insecure_content=True, fake_media_devices=True)\n",
+    "\n",
+    "apply_stealth(driver)\n",
     "\n",
     "def extract_clean_text_from_html(html_content):\n",
-    "    \"\"\"Extract and clean text from HTML content.\"\"\"\n",
+    "\n",
     "    soup = BeautifulSoup(html_content, 'html.parser')\n",
     "    \n",
     "    # Remove unwanted tags\n",
@@ -59,19 +70,20 @@
     "    \n",
     "    # Get clean text\n",
     "    text = soup.get_text(separator=' ', strip=True)\n",
-    "    text = ' '.join(text.split())  # Remove extra whitespace\n",
+    "    text = ' '.join(text.split())\n",
     "    return text\n",
     "\n",
-    "def scrape_recursive(base_url, depth=DEPTH):\n",
-    "    \"\"\"Scrape text recursively up to a specified depth.\"\"\"\n",
+    "def scrape_recursive(base_url, depth=DEPTH, maxLen=MAX_LEN):\n",
+    "\n",
     "    visited_urls = set()\n",
     "    text_data = []\n",
     "    queue = deque([(base_url, 0)])  # (url, current_depth)\n",
     "    \n",
     "    while queue:\n",
     "        url, current_depth = queue.popleft()\n",
-    "\n",
-    "        print(\"Processing: \", url)\n",
+    "        \n",
+    "        if len(visited_urls) >= maxLen:\n",
+    "            continue\n",
     "        \n",
     "        if url in visited_urls or current_depth > depth:\n",
     "            continue\n",
@@ -82,21 +94,22 @@
     "        if '#' in url:\n",
     "            continue\n",
     "        \n",
+    "        print(\"Processing: \", url)\n",
+    "        \n",
     "        visited_urls.add(url)\n",
     "        \n",
     "        try:\n",
+    "            apply_stealth(driver)\n",
     "            driver.get(url)\n",
     "            time.sleep(1)\n",
     "            \n",
     "            page_text = extract_clean_text_from_html(driver.page_source)\n",
     "            text_data.append((url, page_text))\n",
     "            \n",
-    "            # Proceed only if within specified depth\n",
     "            if current_depth < depth:\n",
     "                soup = BeautifulSoup(driver.page_source, 'html.parser')\n",
     "                links = soup.find_all('a', href=True)\n",
     "                \n",
-    "                # Find and queue up all valid links on the page\n",
     "                for link in links:\n",
     "                    new_url = urljoin(base_url, link['href'])\n",
     "                    if new_url not in visited_urls and new_url.startswith(root):\n",
@@ -115,85 +128,30 @@
     "    #driver.quit()\n",
     "    print(\"Finished!\")\n",
     "\n",
-    "print(\"Total text size: \", len(scraped_data))\n",
+    "print(\"Total url pased: \", len(scraped_data))\n",
     "\n",
     "for url, text in scraped_data:\n",
-    "    print(f\"URL: {url}\\nText: {text[:200]}...\\n\")  # Print a snippet of the text"
+    "    print(f\"URL: {url}\\ncontent size: {len(text)}\\nText: {text[:200]}...\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
+   "id": "5e81ca9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_text = '\\n'.join([s for _, s in scraped_data])\n",
+    "print(len(all_text))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f79ce979",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d8f02d445a644837b33abb511b05b364",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Partitioning text:   0%|          | 0/409 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total partition count: 93\n",
-      "Model's embedding dimension: 3072\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "be7bcdadf087428680d233c9a852e139",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Fetching embeddings:   0%|          | 0/93 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "ename": "CancelledError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mCancelledError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[49], line 112\u001b[0m\n\u001b[1;32m    109\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m VERBOSE:\n\u001b[1;32m    110\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTotal partition count: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(partitions)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m--> 112\u001b[0m faiss_index, doc_ids \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mawait\u001b[39;00m store_in_faiss(partitions)\n",
-      "Cell \u001b[0;32mIn[49], line 76\u001b[0m, in \u001b[0;36mstore_in_faiss\u001b[0;34m(partitions)\u001b[0m\n\u001b[1;32m     73\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mModel\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ms embedding dimension: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdimension\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     74\u001b[0m index \u001b[38;5;241m=\u001b[39m faiss\u001b[38;5;241m.\u001b[39mIndexFlatL2(dimension)\n\u001b[0;32m---> 76\u001b[0m embeddings \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mawait\u001b[39;00m get_embeddings(partitions)\n\u001b[1;32m     77\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m embeddings:\n\u001b[1;32m     78\u001b[0m     index\u001b[38;5;241m.\u001b[39madd(np\u001b[38;5;241m.\u001b[39marray(embeddings))  \u001b[38;5;66;03m# Bulk add for efficiency\u001b[39;00m\n",
-      "Cell \u001b[0;32mIn[49], line 60\u001b[0m, in \u001b[0;36mget_embeddings\u001b[0;34m(partitions)\u001b[0m\n\u001b[1;32m     58\u001b[0m payload \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodel\u001b[39m\u001b[38;5;124m\"\u001b[39m: ollama_model_name, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mprompt\u001b[39m\u001b[38;5;124m\"\u001b[39m: partition}\n\u001b[1;32m     59\u001b[0m headers \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mContent-Type\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mapplication/json\u001b[39m\u001b[38;5;124m\"\u001b[39m}\n\u001b[0;32m---> 60\u001b[0m \u001b[38;5;28;01masync\u001b[39;00m \u001b[38;5;28;01mwith\u001b[39;00m session\u001b[38;5;241m.\u001b[39mpost(ollama_url_emb, headers\u001b[38;5;241m=\u001b[39mheaders, data\u001b[38;5;241m=\u001b[39mjson\u001b[38;5;241m.\u001b[39mdumps(payload)) \u001b[38;5;28;01mas\u001b[39;00m response:\n\u001b[1;32m     61\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m response\u001b[38;5;241m.\u001b[39mstatus \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m200\u001b[39m:\n\u001b[1;32m     62\u001b[0m         result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mawait\u001b[39;00m response\u001b[38;5;241m.\u001b[39mjson()\n",
-      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/aiohttp/client.py:1141\u001b[0m, in \u001b[0;36m_BaseRequestContextManager.__aenter__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1140\u001b[0m \u001b[38;5;28;01masync\u001b[39;00m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__aenter__\u001b[39m(\u001b[38;5;28mself\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m _RetType:\n\u001b[0;32m-> 1141\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_resp \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mawait\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_coro\n\u001b[1;32m   1142\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_resp\n",
-      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/aiohttp/client.py:560\u001b[0m, in \u001b[0;36mClientSession._request\u001b[0;34m(self, method, str_or_url, params, data, json, cookies, headers, skip_auto_headers, auth, allow_redirects, max_redirects, compress, chunked, expect100, raise_for_status, read_until_eof, proxy, proxy_auth, timeout, verify_ssl, fingerprint, ssl_context, ssl, proxy_headers, trace_request_ctx, read_bufsize)\u001b[0m\n\u001b[1;32m    558\u001b[0m resp \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mawait\u001b[39;00m req\u001b[38;5;241m.\u001b[39msend(conn)\n\u001b[1;32m    559\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 560\u001b[0m     \u001b[38;5;28;01mawait\u001b[39;00m resp\u001b[38;5;241m.\u001b[39mstart(conn)\n\u001b[1;32m    561\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mBaseException\u001b[39;00m:\n\u001b[1;32m    562\u001b[0m     resp\u001b[38;5;241m.\u001b[39mclose()\n",
-      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/aiohttp/client_reqrep.py:899\u001b[0m, in \u001b[0;36mClientResponse.start\u001b[0;34m(self, connection)\u001b[0m\n\u001b[1;32m    897\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m    898\u001b[0m     protocol \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_protocol\n\u001b[0;32m--> 899\u001b[0m     message, payload \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mawait\u001b[39;00m protocol\u001b[38;5;241m.\u001b[39mread()  \u001b[38;5;66;03m# type: ignore[union-attr]\u001b[39;00m\n\u001b[1;32m    900\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m http\u001b[38;5;241m.\u001b[39mHttpProcessingError \u001b[38;5;28;01mas\u001b[39;00m exc:\n\u001b[1;32m    901\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m ClientResponseError(\n\u001b[1;32m    902\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrequest_info,\n\u001b[1;32m    903\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhistory,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    906\u001b[0m         headers\u001b[38;5;241m=\u001b[39mexc\u001b[38;5;241m.\u001b[39mheaders,\n\u001b[1;32m    907\u001b[0m     ) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mexc\u001b[39;00m\n",
-      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/aiohttp/streams.py:616\u001b[0m, in \u001b[0;36mDataQueue.read\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    614\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_waiter \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_loop\u001b[38;5;241m.\u001b[39mcreate_future()\n\u001b[1;32m    615\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 616\u001b[0m     \u001b[38;5;28;01mawait\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_waiter\n\u001b[1;32m    617\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m (asyncio\u001b[38;5;241m.\u001b[39mCancelledError, asyncio\u001b[38;5;241m.\u001b[39mTimeoutError):\n\u001b[1;32m    618\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_waiter \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
-      "\u001b[0;31mCancelledError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import json\n",
-    "import requests\n",
-    "import numpy as np\n",
-    "import faiss\n",
-    "import asyncio\n",
-    "import aiohttp\n",
-    "from tqdm.notebook import tqdm\n",
-    "\n",
-    "# Constants (assuming these are defined)\n",
-    "VERBOSE = True\n",
-    "\n",
-    "# Function to partition text efficiently\n",
     "def partition_text(text, max_length):\n",
     "    sentences = text.split('. ')\n",
     "    partitions = []\n",
@@ -216,8 +174,6 @@
     "\n",
     "    return partitions\n",
     "\n",
-    "\n",
-    "# Asynchronous function to fetch model embedding shape\n",
     "async def get_embedding_shape():\n",
     "    async with aiohttp.ClientSession() as session:\n",
     "        payload = {\"model\": ollama_model_name}\n",
@@ -234,7 +190,6 @@
     "                print(f\"ERROR: Error from Ollama: {response.status}\")\n",
     "                return 0\n",
     "\n",
-    "# Asynchronous function to fetch embeddings for a batch of text partitions\n",
     "async def get_embeddings(partitions):\n",
     "    embeddings = []\n",
     "    async with aiohttp.ClientSession() as session:\n",
@@ -244,13 +199,12 @@
     "            async with session.post(ollama_url_emb, headers=headers, data=json.dumps(payload)) as response:\n",
     "                if response.status == 200:\n",
     "                    result = await response.json()\n",
-    "                    embeddings.append(np.array(result.get('embedding', np.zeros(768))))  # Adjust based on model\n",
+    "                    embeddings.append(np.array(result.get('embedding', np.zeros(768))))\n",
     "                else:\n",
     "                    print(f\"ERROR: Error from Ollama: {response.status}\")\n",
     "                    embeddings.append(np.zeros(768))\n",
     "    return embeddings\n",
     "\n",
-    "# Store embeddings in FAISS with optimized bulk addition\n",
     "async def store_in_faiss(partitions):\n",
     "    dimension = await get_embedding_shape()\n",
     "    if VERBOSE:\n",
@@ -259,7 +213,7 @@
     "    \n",
     "    embeddings = await get_embeddings(partitions)\n",
     "    if embeddings:\n",
-    "        index.add(np.array(embeddings))  # Bulk add for efficiency\n",
+    "        index.add(np.array(embeddings))\n",
     "    return index, list(range(len(partitions)))\n",
     "\n",
     "# Retrieve function with RAG applied to FAISS\n",
@@ -273,7 +227,8 @@
     "            retrieved_docs.append(partitions[i])\n",
     "\n",
     "    combined_docs = \"\\n\".join(retrieved_docs)\n",
-    "    rag_prompt = f\"Context:\\n{combined_docs}\\n\\nQuery: {query}\\nAnswer:\"\n",
+    "    inst = \"Instruction: If you do not find the answer in the context, just say you dont know.\"\n",
+    "    rag_prompt = f\"{inst}\\n\\nContext:\\n{combined_docs}\\n\\nQuery: {query}\\nAnswer:\"\n",
     "    \n",
     "    async with aiohttp.ClientSession() as session:\n",
     "        payload = {\"model\": ollama_model_name, \"prompt\": rag_prompt, \"stream\": False}\n",
@@ -281,12 +236,10 @@
     "        async with session.post(ollama_url_gen, headers=headers, data=json.dumps(payload)) as response:\n",
     "            return await response.json()\n",
     "\n",
-    "# Function to initiate retrieval with RAG\n",
     "async def ask(query):\n",
     "    rag_response = await retrieve_with_rag(query, faiss_index, partitions)\n",
     "    return rag_response.get(\"response\", \"No response available\")\n",
     "\n",
-    "# Assuming you have `scraped_data` initialized as a list of text data\n",
     "all_text = scraped_data[0][1]\n",
     "partitions = partition_text(all_text, max_length=512)\n",
     "\n",
