RAG qdrant db rest

--- a/codes/rag/RAG_webscrape_qdrant.ipynb
+++ b/codes/rag/RAG_webscrape_qdrant.ipynb
@@ -2,12 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "560667b4",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing:  https://github.com/hissain\n",
+      "Processing:  https://github.com/\n",
+      "Finished!\n",
+      "Total url pased:  2\n",
+      "URL: https://github.com/hissain\n",
+      "content size: 17221\n",
+      "Text: hissain (Md. Sazzad Hissain Khan) · GitHub Skip to content You signed in with another tab or window. Reload to refresh your session. You signed out in another tab or window. Reload to refresh your ses...\n",
+      "\n",
+      "URL: https://github.com/\n",
+      "content size: 3958\n",
+      "Text: GitHub: Let’s build from here · GitHub Skip to content Just a few days left to join us at Universe ‘24! Get free virtual tickets today. You signed in with another tab or window. Reload to refresh your...\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "import faiss\n",
@@ -130,10 +149,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5e81ca9c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21180\n"
+     ]
+    }
+   ],
    "source": [
     "all_text = '\\n'.join([s for _, s in scraped_data])\n",
     "print(len(all_text))"
@@ -141,46 +168,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "f79ce979",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a934d899a5cd4368ad8963ccdcce95f9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Partitioning text:   0%|          | 0/21 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total partition count: 1\n",
+      "Model's embedding dimension: 3072\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "97c152710e2a48adbe6a27ed0cfffeb0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Fetching embeddings:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Embeddings len: 1\n"
+     ]
+    }
+   ],
    "source": [
-    "import time\n",
     "import json\n",
-    "import requests\n",
     "import aiohttp\n",
-    "import random\n",
     "import numpy as np\n",
     "from tqdm.notebook import tqdm\n",
-    "from collections import deque\n",
-    "from qdrant_client import QdrantClient\n",
-    "from qdrant_client.http.models import PointStruct, Filter\n",
-    "from urllib.parse import urljoin\n",
     "\n",
-    "qdrant_client = QdrantClient(\"http://localhost:6333\")\n",
-    "collection_name = \"rag_collection\"\n",
+    "qdrant_url = \"http://localhost:6333\"\n",
+    "collection_name = \"github_collection\"\n",
+    "VERBOSE = True  # Set to True for debug prints\n",
     "\n",
     "def partition_text(text, max_length):\n",
     "    sentences = text.split('. ')\n",
-    "    partitions = []\n",
-    "    current_part = []\n",
-    "    current_length = 0\n",
+    "    partitions, current_part, current_length = [], [], 0\n",
     "\n",
     "    for sentence in tqdm(sentences, desc=\"Partitioning text\"):\n",
     "        sentence_length = len(sentence.split())\n",
-    "        \n",
     "        if current_length + sentence_length > max_length:\n",
     "            partitions.append('. '.join(current_part))\n",
-    "            current_part = []\n",
-    "            current_length = 0\n",
-    "        \n",
+    "            current_part, current_length = [], 0\n",
     "        current_part.append(sentence)\n",
     "        current_length += sentence_length\n",
-    "    \n",
+    "\n",
     "    if current_part:\n",
     "        partitions.append('. '.join(current_part))\n",
-    "\n",
     "    return partitions\n",
     "\n",
     "async def get_embedding_shape():\n",
@@ -210,33 +269,74 @@
     "                    embeddings.append(np.zeros(768))\n",
     "    return embeddings\n",
     "\n",
+    "async def create_collection_rest(dimension):\n",
+    "    url = f\"{qdrant_url}/collections/{collection_name}\"\n",
+    "    payload = {\n",
+    "        \"vectors\": {\n",
+    "            \"text\": {\n",
+    "                \"size\": dimension,\n",
+    "                \"distance\": \"Cosine\"\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "    \n",
+    "    async with aiohttp.ClientSession() as session:\n",
+    "        # Delete existing collection if exists\n",
+    "        async with session.delete(url) as response:\n",
+    "            if response.status not in [200, 404]:  # Ignore 404 as it means collection does not exist\n",
+    "                print(f\"Error deleting collection: {response.status}\")\n",
+    "        \n",
+    "        # Create new collection\n",
+    "        async with session.put(url, json=payload) as response:\n",
+    "            if response.status != 200:\n",
+    "                print(f\"Error creating collection: {response.status}\")\n",
+    "            return response.status\n",
+    "\n",
+    "async def upsert_points_rest(embeddings, partitions):\n",
+    "    url = f\"{qdrant_url}/collections/{collection_name}/points\"\n",
+    "    points = [\n",
+    "        {\"id\": i, \"vector\": embedding.tolist(), \"payload\": {\"text\": partition}}\n",
+    "        for i, (embedding, partition) in enumerate(zip(embeddings, partitions))\n",
+    "    ]\n",
+    "    payload = {\"points\": points}\n",
+    "\n",
+    "    async with aiohttp.ClientSession() as session:\n",
+    "        async with session.put(url, json=payload) as response:\n",
+    "            if response.status != 200:\n",
+    "                print(f\"Error upserting points: {response.status}\")\n",
+    "            return response.status\n",
+    "\n",
     "async def store_in_qdrant(partitions):\n",
     "    dimension = await get_embedding_shape()\n",
     "    if VERBOSE:\n",
     "        print(f\"Model's embedding dimension: {dimension}\")\n",
     "\n",
-    "    qdrant_client.recreate_collection(\n",
-    "        collection_name=collection_name,\n",
-    "        vectors_config={\"size\": dimension, \"distance\": \"Cosine\"},\n",
-    "    )\n",
-    "\n",
+    "    await create_collection_rest(dimension)\n",
     "    embeddings = await get_embeddings(partitions)\n",
-    "    points = [\n",
-    "        PointStruct(id=i, vector=embedding.tolist(), payload={\"text\": partition})\n",
-    "        for i, (embedding, partition) in enumerate(zip(embeddings, partitions))\n",
-    "    ]\n",
-    "    qdrant_client.upsert(collection_name=collection_name, points=points)\n",
+    "    print(\"Embeddings len:\", len(embeddings))\n",
+    "    await upsert_points_rest(embeddings, partitions)\n",
     "\n",
-    "async def retrieve_with_rag(query, partitions, k=5):\n",
+    "async def search_points_rest(query_embedding, k=5):\n",
+    "    url = f\"{qdrant_url}/collections/{collection_name}/points/search\"\n",
+    "    payload = {\n",
+    "        \"vector\": query_embedding.tolist(),\n",
+    "        \"limit\": k,\n",
+    "        \"with_payload\": True\n",
+    "    }\n",
+    "    async with aiohttp.ClientSession() as session:\n",
+    "        async with session.post(url, json=payload) as response:\n",
+    "            if response.status == 200:\n",
+    "                result = await response.json()\n",
+    "                return result[\"result\"]\n",
+    "            else:\n",
+    "                print(f\"Error in search query: {response.status}\")\n",
+    "                return []\n",
+    "\n",
+    "async def retrieve_with_rag(query, k=5):\n",
     "    query_embedding = (await get_embeddings([query]))[0]\n",
-    "    search_result = qdrant_client.search(\n",
-    "        collection_name=collection_name,\n",
-    "        query_vector=query_embedding.tolist(),\n",
-    "        limit=k,\n",
-    "        with_payload=True\n",
-    "    )\n",
-    "    \n",
-    "    retrieved_docs = [hit.payload[\"text\"] for hit in search_result]\n",
+    "    search_result = await search_points_rest(query_embedding, k)\n",
+    "\n",
+    "    retrieved_docs = [hit[\"payload\"][\"text\"] for hit in search_result]\n",
     "    combined_docs = \"\\n\".join(retrieved_docs)\n",
     "    \n",
     "    inst = \"Instruction: If you do not find the answer in the context, just say you don't know.\"\n",
@@ -249,25 +349,52 @@
     "            return await response.json()\n",
     "\n",
     "async def ask(query):\n",
-    "    rag_response = await retrieve_with_rag(query, partitions)\n",
+    "    rag_response = await retrieve_with_rag(query)\n",
     "    return rag_response.get(\"response\", \"No response available\")\n",
     "\n",
-    "partitions = partition_text(all_text, max_length=512)\n",
+    "partitions = partition_text(all_text[:2000], max_length=512)\n",
     "\n",
     "if VERBOSE:\n",
     "    print(f'Total partition count: {len(partitions)}')\n",
     "\n",
-    "await store_in_qdrant(partitions)"
+    "try:\n",
+    "    await store_in_qdrant(partitions)\n",
+    "except Exception as e:\n",
+    "    print(f\"Error storing in Qdrant: {e}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b423f708",
+   "execution_count": 64,
+   "id": "eb117848",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c7d544be4cc349879e446f1cebb5a71e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Fetching embeddings:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error in search query: 400\n",
+      "I don't know.\n"
+     ]
+    }
+   ],
    "source": [
-    "#!pip install qdrant_client"
+    "res = await ask(\"Whats Hissains special interest?\")\n",
+    "print(res)"
    ]
   }
  ],
